fixed overflow-x

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,6 +1,6 @@
-html, body {
+html {
   width: 100%;
-  height: auto;
+  height: 100%;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
